configure gradle to use module, and add dependency on ADBA (openJdk sandbox)